1.0.0: BETA
     - fixed minor AFS Group Manager bug
     - added disk usage web interface extension 'DiskUsage'
     - added POSIX ACL web interface extension 'PosixAclManager'
     - added web interface extension 'Download' 
     - added web interface extension 'SendByMail'
     - added web interface extension 'Diff'
     - added web interface extension 'Zip' 
     - added web interface extension 'AFSGroupManager'
     - added web interface extension 'AFSACLManager'
     - added web interface extension 'Permissions'
     - added web interface extension 'Search'
     - added web interface extension 'Highlighter'
     - added web interface extension 'PublicUri'
     - added web interface extension 'Redirect'
     - added web interface extension 'SourceCodeViewer'
     - removed ALLOW_ZIP_(UP|DOWN)LOAD support (replaced by 'Zip' extension)
     - removed ENABLE_AFSGROUPMANAGER (replaced by 'AFSGroupManager' extension)
     - removed ENABLE_AFSACLMANAGER (replaced by 'AFSACLManager' extension)
     - removed ENABLE_PERMISSIONS (replaced by 'Permissions' extension)
     - removed ALLOW_SEARCH (replaced by 'Search' extension)

0.9.0: 2014/25/4
     - removed classic view, sidebar view, unused code
     - added missing contact button
     - fixed directory access check for the SMB back-end
     - fixed DBI_PERSISTENT feature
     - added read-only back-end wrapper RO 
     - added some missing extension hooks
     - fixed properties bug reported by Harald Strack @ ssystems
     - added extension configuration support
     - improved back-end configuration support
     - added event handling for extensions
     - added show locks feature ($SHOW_LOCKS)
     - fixed timed out locks bug reported by Harald Strack @ ssystems
     - fixed web interface ignoring WebDAV locks bug
     - fixed locks in virtual links bug
     - added missing Speedy related doc (thanx Harald Strack @ sssystems)
   
0.8.6: 2013/7/8
     - fixed cookie related bug
     - added head toggle